# solarpredictcmr

./: .gitignore  Data_Preprocessing.ipynb  Exploratoty_analysis.ipynb  Feature_engineering.ipynb  Model_validation.ipynb  README.md  feature_model_II.ipynb  package.json  pyproject.toml  vercel.json
Data/Processed/: Douala_Cleaned.csv  Maroua_Cleaned.csv
Data/Raw/: Douala_Dataset.csv  Maroua_Dataset.csv
Model/: best_douala_xgb.pkl  best_maroua_xgb.pkl  maroua_xgb_model_ii.pkl
backend/: __init__.py  inspect_db.py  requirements.txt  solar_predict.db
backend/app/: __init__.py  config.py  database.py  features.py  main.py  microgrid.py  model_loader.py  schemas.py  weather.py
backend/app/services/: alert_service.py  analytics_service.py  microgrid_recommendation.py  report_service.py  weekly_report_service.py
docs/: Chapter_4_Implementation_Draft.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AlertBanner.jsx  BatteryGauge.jsx  Layout.jsx  RecommendationBadge.jsx  StatCard.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  History.jsx  Microgrid.jsx  Prediction.jsx  Reports.jsx
frontend/src/styles/: index.css
training/: Model_comparism.ipynb  Model_comparism_Model_II.ipynb  Model_training_Douala.ipynb  Model_training_Douala_Model_II.ipynb  Model_training_Maroua.ipynb  Model_training_Maroua_Model_II.ipynb  model_ii_comparison_summary.csv  results_douala.csv  results_douala_model_ii.csv  results_maroua.csv  results_maroua_model_ii.csv
(+2 files in other folders)
