[project]
name = "solarpredict"
version = "1.0.0"
description = "Solar Energy Forecasting and Microgrid Optimization"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "joblib==1.4.2",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.20",
    "xgboost==2.1.3",
    "reportlab==4.2.5",
]
